{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 29,
  "lineage": "578f88be-24e5-c448-47a3-371083e43a8c",
  "resources": [
    {
      "module": "module.private_subnet1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:049474991519:subnet/subnet-086552de03a8e091f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-086552de03a8e091f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049474991519",
            "tags": {
              "Name": "ksj-TF-subnet-private",
              "Owner": "ksj"
            },
            "tags_all": {
              "Name": "ksj-TF-subnet-private",
              "Owner": "ksj"
            },
            "vpc_id": "vpc-0812b07a4be9d5888"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:049474991519:subnet/subnet-0e70a618e3c8d7f4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-0e70a618e3c8d7f4e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049474991519",
            "tags": {
              "Name": "ksj-TF-subnet-private",
              "Owner": "ksj"
            },
            "tags_all": {
              "Name": "ksj-TF-subnet-private",
              "Owner": "ksj"
            },
            "vpc_id": "vpc-0812b07a4be9d5888"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet3",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:049474991519:subnet/subnet-0a5d5b9d73636b73e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.5.0/24",
            "id": "subnet-0a5d5b9d73636b73e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049474991519",
            "tags": {
              "Name": "ksj-TF-subnet-private",
              "Owner": "ksj"
            },
            "tags_all": {
              "Name": "ksj-TF-subnet-private",
              "Owner": "ksj"
            },
            "vpc_id": "vpc-0812b07a4be9d5888"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:049474991519:subnet/subnet-09d8065e5ce73a1f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-09d8065e5ce73a1f7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "049474991519",
            "tags": {
              "Name": "ksj-TF-subnet-public",
              "Owner": "ksj"
            },
            "tags_all": {
              "Name": "ksj-TF-subnet-public",
              "Owner": "ksj"
            },
            "vpc_id": "vpc-0812b07a4be9d5888"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:049474991519:subnet/subnet-0edc090229020299a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0edc090229020299a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "049474991519",
            "tags": {
              "Name": "ksj-TF-subnet-public",
              "Owner": "ksj"
            },
            "tags_all": {
              "Name": "ksj-TF-subnet-public",
              "Owner": "ksj"
            },
            "vpc_id": "vpc-0812b07a4be9d5888"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet3",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:049474991519:subnet/subnet-03699520da9d6c37b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-03699520da9d6c37b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "049474991519",
            "tags": {
              "Name": "ksj-TF-subnet-public",
              "Owner": "ksj"
            },
            "tags_all": {
              "Name": "ksj-TF-subnet-public",
              "Owner": "ksj"
            },
            "vpc_id": "vpc-0812b07a4be9d5888"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet_rtb_igw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:049474991519:route-table/rtb-0d33e24faf67f71b7",
            "id": "rtb-0d33e24faf67f71b7",
            "owner_id": "049474991519",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ksj-TF-rtb-pri",
              "Owner": "ksj"
            },
            "tags_all": {
              "Name": "ksj-TF-rtb-pri",
              "Owner": "ksj"
            },
            "vpc_id": "vpc-0812b07a4be9d5888"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet_rtb_igw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:049474991519:route-table/rtb-098096531243855f9",
            "id": "rtb-098096531243855f9",
            "owner_id": "049474991519",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e3309b800d6d1b8e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ksj-TF-rtb-public",
              "Owner": "ksj"
            },
            "tags_all": {
              "Name": "ksj-TF-rtb-public",
              "Owner": "ksj"
            },
            "vpc_id": "vpc-0812b07a4be9d5888"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet_rtb_igw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e79519ac0f2feffb",
            "route_table_id": "rtb-098096531243855f9",
            "subnet_id": "subnet-09d8065e5ce73a1f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.private_subnet3.aws_subnet.subnet",
            "module.public_subnet1.aws_subnet.subnet",
            "module.public_subnet2.aws_subnet.subnet",
            "module.public_subnet3.aws_subnet.subnet",
            "module.public_subnet_rtb_igw.aws_route_table.pri-rtb",
            "module.public_subnet_rtb_igw.aws_route_table.rtb",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cb3e203f691623c",
            "route_table_id": "rtb-098096531243855f9",
            "subnet_id": "subnet-0edc090229020299a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.private_subnet3.aws_subnet.subnet",
            "module.public_subnet1.aws_subnet.subnet",
            "module.public_subnet2.aws_subnet.subnet",
            "module.public_subnet3.aws_subnet.subnet",
            "module.public_subnet_rtb_igw.aws_route_table.pri-rtb",
            "module.public_subnet_rtb_igw.aws_route_table.rtb",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00edec8a9721e23b2",
            "route_table_id": "rtb-098096531243855f9",
            "subnet_id": "subnet-03699520da9d6c37b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.private_subnet3.aws_subnet.subnet",
            "module.public_subnet1.aws_subnet.subnet",
            "module.public_subnet2.aws_subnet.subnet",
            "module.public_subnet3.aws_subnet.subnet",
            "module.public_subnet_rtb_igw.aws_route_table.pri-rtb",
            "module.public_subnet_rtb_igw.aws_route_table.rtb",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6aed234e5b2cb96",
            "route_table_id": "rtb-0d33e24faf67f71b7",
            "subnet_id": "subnet-086552de03a8e091f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.private_subnet3.aws_subnet.subnet",
            "module.public_subnet1.aws_subnet.subnet",
            "module.public_subnet2.aws_subnet.subnet",
            "module.public_subnet3.aws_subnet.subnet",
            "module.public_subnet_rtb_igw.aws_route_table.pri-rtb",
            "module.public_subnet_rtb_igw.aws_route_table.rtb",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0348164efcd3c213b",
            "route_table_id": "rtb-0d33e24faf67f71b7",
            "subnet_id": "subnet-0e70a618e3c8d7f4e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.private_subnet3.aws_subnet.subnet",
            "module.public_subnet1.aws_subnet.subnet",
            "module.public_subnet2.aws_subnet.subnet",
            "module.public_subnet3.aws_subnet.subnet",
            "module.public_subnet_rtb_igw.aws_route_table.pri-rtb",
            "module.public_subnet_rtb_igw.aws_route_table.rtb",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cea2f0eb1e9593a0",
            "route_table_id": "rtb-0d33e24faf67f71b7",
            "subnet_id": "subnet-0a5d5b9d73636b73e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.private_subnet3.aws_subnet.subnet",
            "module.public_subnet1.aws_subnet.subnet",
            "module.public_subnet2.aws_subnet.subnet",
            "module.public_subnet3.aws_subnet.subnet",
            "module.public_subnet_rtb_igw.aws_route_table.pri-rtb",
            "module.public_subnet_rtb_igw.aws_route_table.rtb",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:049474991519:internet-gateway/igw-0e3309b800d6d1b8e",
            "id": "igw-0e3309b800d6d1b8e",
            "owner_id": "049474991519",
            "tags": {
              "Name": "ksj-TF-igw",
              "Owner": "ksj"
            },
            "tags_all": {
              "Name": "ksj-TF-igw",
              "Owner": "ksj"
            },
            "vpc_id": "vpc-0812b07a4be9d5888"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:049474991519:vpc/vpc-0812b07a4be9d5888",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08a9bafafbd33071e",
            "default_route_table_id": "rtb-0609b802bb3d780da",
            "default_security_group_id": "sg-0fe97133fc821857c",
            "dhcp_options_id": "dopt-1e5e1a75",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0812b07a4be9d5888",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0609b802bb3d780da",
            "owner_id": "049474991519",
            "tags": {
              "Name": "ksj-TF-vpc",
              "Owner": "ksj"
            },
            "tags_all": {
              "Name": "ksj-TF-vpc",
              "Owner": "ksj"
            }
          }
        }
      ]
    }
  ]
}